# QinLin_PassportReader

./: PassportReader.files  PassportReader.includes  README.md  toolchain_qilin.cmake
PassportReader/: CMakeLists.txt
PassportReader/PassportReaderAPI/: CMakeLists.txt
PassportReader/PassportReaderAPI/back_up/: WltRS.cpp  WltRS.h
PassportReader/PassportReaderAPI/back_up/zhangdi_utils/: utils_zhangdi.cpp  utils_zhangdi.h
PassportReader/PassportReaderAPI/include/: getData.h  globalMacro.h  internalLogging.h  utils.h  utils_zhangdi.h
PassportReader/PassportReaderAPI/include/json/: assertions.h
PassportReader/PassportReaderAPI/src/: WltRS.cpp  getData.cpp  utils.cpp  utils_zhangdi.cpp
PassportReader/libCheck/include/: FileProcess.h
PassportReader/libChip/include/: CryptoDES.h  RFReader.h  echip.h  libChip.h
PassportReader/libChip/src/: CryptoDES.cpp  JP2.cpp  Ptypes.cpp  echip.cpp  passport.cpp
PassportReader/libChip_auth/include/: RFReader.h  echip.h  libChip.h
PassportReader/libChip_auth/src/: CryptoDES.cpp  RFReader.cpp  echip.cpp  passport.cpp
PassportReader/libImageProcess/include/: ImageProcess.h
PassportReader/libImageProcess/src/: ImageProcess.cpp
PassportReader/libLED/src/: USB_HAL.cpp
PassportReader/libOCRNew/include/: config.h  findMrz.h  mrz.h  rotate.h  utils.h
PassportReader/libOCRNew/src/: findMrz.cpp  mrz.cpp  utils.cpp
glog-master/: Makefile  config.status  demangle_unittest  glog.sh  libglog.la  libglog.pc  libtool  logging_striptest0  logging_striptest10  logging_striptest2  logging_unittest  signalhandler_unittest  stacktrace_unittest  stl_logging_unittest  symbolize_pie_unittest  symbolize_unittest  utilities_unittest
glog-master/.libs/: demangle_unittest  libglog.so.0.0.0  logging_striptest0  logging_striptest10  logging_striptest2  logging_unittest  signalhandler_unittest  stacktrace_unittest  stl_logging_unittest  symbolize_pie_unittest  symbolize_unittest  utilities_unittest
glog-master/src/.deps/: demangle_unittest-demangle_unittest.Po  libglog_la-demangle.Plo  libglog_la-logging.Plo  libglog_la-raw_logging.Plo  libglog_la-signalhandler.Plo  libglog_la-symbolize.Plo  libglog_la-utilities.Plo  libglog_la-vlog_is_on.Plo  logging_striptest0-logging_striptest_main.Po  logging_striptest10-logging_striptest10.Po  logging_striptest2-logging_striptest2.Po  logging_unittest-logging_unittest.Po  signalhandler_unittest-signalhandler_unittest.Po  stacktrace_unittest-stacktrace_unittest.Po  stl_logging_unittest-stl_logging_unittest.Po  symbolize_pie_unittest-symbolize_unittest.Po  symbolize_unittest-symbolize_unittest.Po  utilities_unittest-utilities_unittest.Po
install/include/: getData.h
install/include/openssl/: opensslconf.h
install/lib/: libglog.la  libopencv_calib3d.so.4.3.0  libopencv_features2d.so.4.3.0  libopencv_flann.so.4.3.0  libopencv_gapi.so.4.3.0  libopencv_highgui.so.4.3.0  libopencv_imgcodecs.so.4.3.0  libopencv_ml.so.4.3.0  libopencv_objdetect.so.4.3.0  libopencv_photo.so.4.3.0  libopencv_stitching.so.4.3.0  libopencv_video.so.4.3.0  libopencv_videoio.so.4.3.0  libopenjp2.so.2.3.1  libusb-1.0.la  libusb-1.0.so.0
install/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake
install/lib/openjpeg-2.3/: OpenJPEGConfig.cmake  OpenJPEGTargets-release.cmake  OpenJPEGTargets.cmake
install/lib/pkgconfig/: libcrypto.pc  libusb-1.0.pc
libusb-1.0.23/: Makefile  config.status  libtool  libusb.sh
libusb-1.0.23/doc/: Makefile
libusb-1.0.23/examples/: Makefile
libusb-1.0.23/libusb/: Makefile  libusb-1.0.la
libusb-1.0.23/libusb/.deps/: libusb_1_0_la-core.Plo  libusb_1_0_la-descriptor.Plo  libusb_1_0_la-io.Plo  libusb_1_0_la-strerror.Plo  libusb_1_0_la-sync.Plo
libusb-1.0.23/libusb/.libs/: libusb-1.0.so.0.2.0
libusb-1.0.23/libusb/os/.deps/: libusb_1_0_la-linux_netlink.Plo  libusb_1_0_la-poll_posix.Plo  libusb_1_0_la-threads_posix.Plo
libusb-1.0.23/tests/: Makefile
openssl-1.1.0k/: Makefile  configdata.pm  libcrypto.so.1.1  libssl.pc  libssl.so.1.1  openssl.pc  openssl.sh
openssl-1.1.0k/apps/: openssl
openssl-1.1.0k/crypto/: armcap.d  buildinf.h
openssl-1.1.0k/crypto/evp/: e_aes.d
openssl-1.1.0k/crypto/modes/: gcm128.d
openssl-1.1.0k/fuzz/: asn1-test  asn1parse-test  bignum-test  bndiv-test  cms-test  conf-test  crl-test  ct-test  server-test  x509-test
openssl-1.1.0k/test/: aborttest  afalgtest  asynciotest  asynctest  bad_dtls_test  bftest  bio_enc_test  bioprinttest  bntest  buildtest_aes  buildtest_asn1  buildtest_asn1t  buildtest_async  buildtest_bio  buildtest_blowfish  buildtest_bn  buildtest_buffer  buildtest_camellia  buildtest_cast  buildtest_cmac  buildtest_cms  buildtest_comp  buildtest_conf  buildtest_conf_api  buildtest_crypto  buildtest_ct  buildtest_des  buildtest_dh  buildtest_dsa  buildtest_dtls1  buildtest_e_os2  buildtest_ebcdic  buildtest_ec  buildtest_ecdh  buildtest_ecdsa  buildtest_engine  buildtest_err  buildtest_evp  buildtest_hmac  buildtest_idea  (+103 more)
tensorflow-1.10.0_arm64-v8a_2021-3-18/: readme.txt
参考/: CMakeLists.txt
